--- a/src/app/pages/transaction-failed/transaction-failed.page.html
+++ b/src/app/pages/transaction-failed/transaction-failed.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-back-button defaultHref="home"></ion-back-button>
+            <ion-back-button (click)="backClick()"></ion-back-button>
         </ion-buttons>
 
         <ion-title>Transaction Status</ion-title>
