--- a/src/app/homeselect/homeselect.page.html
+++ b/src/app/homeselect/homeselect.page.html
@@ -9,15 +9,11 @@
 
 <ion-content padding>
 
-
     <ion-list>
         <ion-item *ngFor="let item of plaza">
             <ion-label>{{item.toll_name}} | {{item.city}}</ion-label>
             <ion-checkbox slot="end" value="{{item.toll_plaza_id}}" (ionChange)="onSelect(item.toll_plaza_id)">{{item.toll_name}}</ion-checkbox>
         </ion-item>
     </ion-list>
-
-
-    <ion-button style="position:fixed;width:100%;bottom:0;left:0" (click)="onClick()">Next</ion-button>
-
+    <ion-button [disabled]="buttonDisabled" style="position:fixed;width:100%;bottom:0;left:0" (click)="onClick()">Next</ion-button>
 </ion-content>
