--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -39,7 +39,7 @@
 
         </div>
         <br>
-        <a style="float:right;font-size:12px;" (click)="forgetpassword()">Forget Password??</a>
+        <a style="float:right;font-size:12px;" (click)="forgetpassword()">Forgot Password??</a>
         <br>
         <ion-button [disabled]="!loginform.valid" (click)="onlogin()" expand="full">
             Login
