--- a/src/app/pages/forgetpassword/forgetpassword.page.html
+++ b/src/app/pages/forgetpassword/forgetpassword.page.html
@@ -1,51 +1,67 @@
 <ion-header>
     <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-back-button defaultHref="login"></ion-back-button>
-      </ion-buttons>
-      <ion-title>Forget Password</ion-title>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="login"></ion-back-button>
+        </ion-buttons>
+        <ion-title>Forgot Password</ion-title>
     </ion-toolbar>
-  </ion-header>
-  
-  <ion-content padding>
+</ion-header>
+
+<ion-content padding>
     <form [formGroup]="myform" *ngIf="value2">
-      <ion-item >
-        <ion-input type="email" formControlName="email" placeholder="Enter a Registed Mail" [(ngModel)]="email">
-  
-        </ion-input>
-        <ion-button (click)="send()" [disabled]="!myform.valid">
-          Send
-        </ion-button>
-      </ion-item>
+        <ion-item>
+            <ion-input type="email" formControlName="email" placeholder="Enter a Registed Mail" [(ngModel)]="email">
+
+            </ion-input>
+            <ion-button (click)="send()" [disabled]="!myform.valid">
+                Send
+            </ion-button>
+        </ion-item>
     </form>
-      <ion-item *ngIf="value1">
+    <ion-item *ngIf="value1">
         <ion-input type="text" placeholder="Enter a OTP" [(ngModel)]="user_input">
-  
+
         </ion-input>
-  
+
         <br>
         <ion-button (click)="submit1()">
-          Submit
+            Submit
         </ion-button>
-      </ion-item>
-  
-      <form [formGroup]="myform1" *ngIf="value3">
-      <ion-item *ngIf="value3">
-        <ion-input type="text" formControlName="pass" placeholder="Enter a new password" [(ngModel)]="pass">
-  
-        </ion-input>
-      </ion-item>
-      <ion-item *ngIf="value3">
-        <ion-input type="text" formControlName="pass1" placeholder="confirm password" [(ngModel)]="pass1">
-  
-        </ion-input>
-      </ion-item>
-  
-      <ion-item *ngIf="value3">
-        <ion-button (click)="change()" [disabled]="!myform1.valid">
-          chnage password
-        </ion-button>
-      </ion-item>
+    </ion-item>
+
+    <form [formGroup]="myform1" *ngIf="value3">
+        <ion-item *ngIf="value3">
+            <ion-input type="password" formControlName="pass" placeholder="Enter a new password" [(ngModel)]="pass">
+
+            </ion-input>
+        </ion-item>
+        <div *ngIf="!myform1.controls.pass.valid &&
+        myform1.controls.pass.dirty" style="color:red;">
+
+            Minmum 6 Charactor
+            <br>->One Special Charactor
+            <br>->One Digit
+
+        </div>
+        <ion-item *ngIf="value3">
+            <ion-input type="password" formControlName="pass1" placeholder="confirm password" [(ngModel)]="pass1">
+
+            </ion-input>
+        </ion-item>
+        <div *ngIf="!myform1.controls.pass1.valid &&
+        myform1.controls.pass1.dirty" style="color:red;">
+
+            Minmum 6 Charactor
+            <br>->One Special Charactor
+            <br>->One Digit
+
+        </div>
+
+        <ion-item *ngIf="value3">
+            <ion-button (click)="change()" [disabled]="!myform1.valid">
+                chnage password
+            </ion-button>
+        </ion-item>
     </form>
-  
-  </ion-content>
+
+</ion-content>
