--- a/src/app/pages/transection-status/transection-status.page.html
+++ b/src/app/pages/transection-status/transection-status.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-back-button  defaultHref="confirm-payment"></ion-back-button>
+            <ion-back-button (click)="backClick()"></ion-back-button>
         </ion-buttons>
         <ion-title>Transaction Status</ion-title>
     </ion-toolbar>
