--- a/src/app/changepassword/changepassword.page.html
+++ b/src/app/changepassword/changepassword.page.html
@@ -1,52 +1,52 @@
-
-    
 <ion-header>
-  <ion-toolbar>
-    <ion-title>changepassword</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="my-profile"></ion-back-button>
+        </ion-buttons>
+        <ion-title>Change Password</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-        <form [formGroup]="myform">
+    <form [formGroup]="myform">
         <ion-item>
-          <ion-label position="floating">Old Password:</ion-label>
-          <ion-input formControlName="oldpass" id="oldpass" type="text" [(ngModel)]="oldpass"></ion-input>
+            <ion-label position="floating">Old Password:</ion-label>
+            <ion-input formControlName="oldpass" id="oldpass" type="password" [(ngModel)]="oldpass"></ion-input>
         </ion-item><br>
         <div *ngIf="!myform.controls.oldpass.valid &&
         myform.controls.oldpass.dirty" style="color:red;">
-                  Please Enter a Valid Password
-                  <br>Minmum 6 Charactor
-                  <br>One Special Charactor
-                  <br>One Digit
+            Please Enter a Valid Password
+            <br>Minmum 6 Charactor
+            <br>One Special Charactor
+            <br>One Digit
         </div>
         <ion-item>
-          <ion-label position="floating">New Password:</ion-label>
-          <ion-input formControlName="newpass" id="newpass" type="text" [(ngModel)]="newpass"></ion-input>
+            <ion-label position="floating">New Password:</ion-label>
+            <ion-input formControlName="newpass" id="newpass" type="password" [(ngModel)]="newpass"></ion-input>
         </ion-item>
         <div *ngIf="!myform.controls.newpass.valid &&
         myform.controls.newpass.dirty" style="color:red;">
-                  Please Enter a Valid Password
-                  <br>Minmum 6 Charactor
-                  <br>One Special Charactor
-                  <br>One Digit
+            Please Enter a Valid Password
+            <br>Minmum 6 Charactor
+            <br>One Special Charactor
+            <br>One Digit
         </div>
         <ion-item>
-          <ion-label position="floating">Confirm Password:</ion-label>
-          <ion-input formControlName="confpass" id="confpass" type="text" [(ngModel)]="confpass"></ion-input>
+            <ion-label position="floating">Confirm Password:</ion-label>
+            <ion-input formControlName="confpass" id="confpass" type="password" [(ngModel)]="confpass"></ion-input>
         </ion-item>
         <div *ngIf="!myform.controls.confpass.valid &&
         myform.controls.confpass.dirty" style="color:red;">
-                  Please Enter a Valid Password
-                  <br>Minmum 6 Charactor
-                  <br>One Special Charactor
-                  <br>One Digit
+            Please Enter a Valid Password
+            <br>Minmum 6 Charactor
+            <br>One Special Charactor
+            <br>One Digit
         </div>
-        <div *ngIf="!(myform.controls.newpass.value == myform.controls.confpass.value)"  
-        style="color:red;">
-                  Password Do Not Match
+        <div *ngIf="!(myform.controls.newpass.value == myform.controls.confpass.value)" style="color:red;">
+            Password Do Not Match
         </div>
         <ion-button expand="block" color="primary" (click)="ChangePassword()" style="position:absolute; bottom: 5%; width:97%; left: 1%">
-          <ion-icon name="lock"></ion-icon> &nbsp; Save Changes
+            <ion-icon name="lock"></ion-icon> &nbsp; Save Changes
         </ion-button>
-      </form>
+    </form>
 </ion-content>
