--- a/src/app/pages/confirm-payment/confirm-payment.page.html
+++ b/src/app/pages/confirm-payment/confirm-payment.page.html
@@ -8,103 +8,112 @@
 </ion-header>
 
 <ion-content padding>
-    <table style="padding: 2%;border:0;">
-        <tr>
-            <td>
-                <ion-label style="float:left;text-decoration:bold">
-                    <b> Date :- {{ mdate | date: "mediumDate" }}</b>
-                </ion-label>
-                <ion-label style="float: right;">
-                    <b>Time :- {{ stime | date: "shortTime" }} </b>
-                </ion-label>
-            </td>
-        </tr>
-    </table>
+    <form [formGroup]="myform">
+        <table style="padding: 2%;border:0;">
+            <tr>
+                <td>
+                    <ion-label style="float:left;text-decoration:bold">
+                        <b> Date :- {{ mdate | date: "mediumDate" }}</b>
+                    </ion-label>
+                    <ion-label style="float: right;">
+                        <b>Time :- {{ stime | date: "shortTime" }} </b>
+                    </ion-label>
+                </td>
+            </tr>
+        </table>
 
-  <br /><br />
-   <table>
-    <tr>
-      <td>
-        <ion-label>
-          <b> Vehicle No :- {{ vno }}</b>
-        </ion-label>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <ion-label>
-          <b> Journey Type :- {{ whichj }}</b>
-        </ion-label>
-        <br />
-        <ion-label *ngFor="let item of vehicletype" style="float:left">
-          <b> Vehicle :- {{ item.vehicle_type_name }}</b>
-        </ion-label>
-      </td>
-    </tr>
-  </table>
-  
-  <table id="a">
-    <tr><th>Sr.No </th><th>Highway Name</th><th>City Name</th><th>Emergency No</th><th>Toll Name</th><th>Amount</th></tr>
-    <tr *ngFor="let item of final_arr_transaction">
-      <td>
-        {{ item.SrNo }}
-      </td>
-      <td>
-        {{ item.highway_name }}
-      </td>
-      <td>
-        {{ item.city }}
-      </td>
-      <td>
-        {{ item.emergency_number }}
-      </td>
-     
-      <td>
-        {{ item.toll_name }}
-      </td>
-      <td>
-        {{ item.amount }}
-      </td>
-    </tr>
-    <tr>
-      <td colspan="5">
-        <ion-label style="float:left">
-          <b> Total Amount :- </b>
-        </ion-label>
-      </td>
-      <td>
-        <ion-label>
-          <b>{{ amt | currency: "INR" }}</b>
-        </ion-label>
-      </td>
-    </tr>
-  </table>
+        <br /><br />
+        <table>
+            <tr>
+                <td>
+                    <ion-label>
+                        <b> Vehicle No :- {{ vno }}</b>
+                    </ion-label>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <ion-label>
+                        <b> Journey Type :- {{ whichj }}</b>
+                    </ion-label>
+                    <br />
+                    <ion-label *ngFor="let item of vehicletype" style="float:left">
+                        <b> Vehicle :- {{ item.vehicle_type_name }}</b>
+                    </ion-label>
+                </td>
+            </tr>
+        </table>
 
-  <table> 
-    <ion-list *ngFor="let item of paydata">
-      <div class="card list">
-        <div class="item item-divider">
-          <h3><b>Payment Detail</b></h3>
-        </div>
-        <div class="item item-divider">
-          <h6><b> Card No </b> :- {{ item.card_no }}</h6>
-        </div>
-        <div class="item item-divider">
-          <h6><b> Method Name </b> :- {{ item.method_name }}</h6>
-        </div>
-        <div class="item item-divider">
-          <h6><b> Card Name </b> :- {{ item.card_name }}</h6>
-        </div>
-        <div>
-          <ion-item>
-            <ion-input type="password" pattern="[0-9]{3}" placeholder="Enter CVV" title="Only three Digit allow">
-            </ion-input>
+        <table id="a">
+            <tr>
+                <th>Sr.No </th>
+                <th>Highway Name</th>
+                <th>City Name</th>
+                <th>Emergency No</th>
+                <th>Toll Name</th>
+                <th>Amount</th>
+            </tr>
+            <tr *ngFor="let item of final_arr_transaction">
+                <td>
+                    {{ item.SrNo }}
+                </td>
+                <td>
+                    {{ item.highway_name }}
+                </td>
+                <td>
+                    {{ item.city }}
+                </td>
+                <td>
+                    {{ item.emergency_number }}
+                </td>
 
-           <img src="../../../assets/icon/cvv.jpg" alt="" width=20%>
-          </ion-item>
-        </div>
-      </div>
-    </ion-list>
-  </table>
-  <ion-button expand="block"  style="position:fixed;width:100%;bottom:0;left:0" (click)="transaction()">Confirm</ion-button>
+                <td>
+                    {{ item.toll_name }}
+                </td>
+                <td>
+                    {{ item.amount }}
+                </td>
+            </tr>
+            <tr>
+                <td colspan="5">
+                    <ion-label style="float:left">
+                        <b> Total Amount :- </b>
+                    </ion-label>
+                </td>
+                <td>
+                    <ion-label>
+                        <b>{{ amt | currency: "INR" }}</b>
+                    </ion-label>
+                </td>
+            </tr>
+        </table>
+
+        <table>
+            <ion-list *ngFor="let item of paydata">
+                <div class="card list">
+                    <div class="item item-divider">
+                        <h3><b>Payment Detail</b></h3>
+                    </div>
+                    <div class="item item-divider">
+                        <h6><b> Card No </b> :- {{ item.card_no }}</h6>
+                    </div>
+                    <div class="item item-divider">
+                        <h6><b> Method Name </b> :- {{ item.method_name }}</h6>
+                    </div>
+                    <div class="item item-divider">
+                        <h6><b> Card Name </b> :- {{ item.card_name }}</h6>
+                    </div>
+                    <div>
+                        <ion-item>
+                            <ion-input type="password" formControlName="cvv_no" [(ngModel)]="cvv_no" placeholder="Enter CVV" title="Only three Digit allow">
+                            </ion-input>
+
+                            <img src="../../../assets/icon/cvv.jpg" alt="" width=20%>
+                        </ion-item>
+                    </div>
+                </div>
+            </ion-list>
+        </table>
+        <ion-button expand="block" [disabled]="!myform.valid" style="position:fixed;width:100%;bottom:0;left:0" (click)="transaction()">Confirm</ion-button>
+    </form>
 </ion-content>
